# friend-olympics

./: .gitignore  .pre-commit-config.yaml  .sesskey  Earthfile  db.sqlite  docker-compose.yaml  entrypoint.sh  hello.py  iterate.sh  manage.py  pyproject.toml
fixtures/: fixtures.json  games.json  ranks.json  users.json
gamenight/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
gamenight/games/: admin.py  apps.py  consumers.py  forms.py  tables.py  urls.py  views.py  widgets.py
gamenight/games/management/commands/: qrcodes.py
gamenight/games/migrations/: 0001_initial.py  0002_fixture_graph_rank_delta.py
gamenight/games/models/: fixture.py  game.py  rank.py  user.py  utils.py
gamenight/games/static/games/: iommi.js  leaderboard.css  rank_input.js  select2.css
gamenight/games/templatetags/: games_extras.py
gamenight/templates/: base.html
gamenight/templates/chunk/: qrcode.html  rank_input.html  score.html
gamenight/templates/games/: fixture_create.html  fixture_detail.html  fixture_table_active.html  fixture_table_ended.html  fixture_update.html  game_detail.html  user_table.html
olympics/: asgi.py  settings.py  urls.py  wsgi.py
olympics/games/: admin.py  apps.py  broadcaster.py  consumers.py  forms.py  tables.py  urls.py  views.py
olympics/games/management/commands/: qrcodes.py
olympics/games/migrations/: 0001_initial.py
olympics/games/models/: __init__.py  fixture.py  game.py  rank.py  user.py  utils.py
olympics/templates/: base.html
olympics/templates/chunk/: rank_input.html  score.html
olympics/templates/games/: fixture_detail.html  fixture_table.html  fixture_table_active.html  fixture_table_ended.html  game_table.html  user_table.html
scripts/: dev.sh  entrypoint.sh
src/: database.py  main.py
test/: test_database.py
tests/: base.py  test_simulations.py  test_templatetags.py
tests/test_models/: test_fixture.py  test_game.py  test_user.py  test_utils.py
