[project]
name = "friend-olympics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.2.1",
    "pytest>=8.3.3",
    "python-fasthtml>=0.10.0",
    "sqlmodel>=0.0.22",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]
