[project]
name = "gamenight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.2.1",
    "channels[daphne]>=4.2.0",
    "django>=5.1.3",
    "django-extensions>=3.2.3",
    "django-filter>=24.3",
    "django-ratelimit>=4.1.0",
    "django-tables2>=2.7.0",
    "iommi>=7.7.2",
    "networkx[default]>=3.4.2",
    "psycopg[binary]>=3.2.3",
    "qrcode[pil]>=8.0",
    "sentry-sdk[django]>=2.19.0",
    "whitenoise[brotli]>=6.8.2",
    "redis>=5.2.1",
]

[dependency-groups]
dev = [
    "django-stubs[compatible-mypy]>=5.1.1",
    "djlint>=1.36.3",
    "ipython>=8.30.0",
    "model-bakery>=1.20.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "pytest-django>=4.9.0",
    "pytest-env>=1.1.5",
    "ruff>=0.8.0",
]

[tool.pytest_env]
DJANGO_SETTINGS_MODULE = "gamenight.settings"
DEBUG = 1

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "PT",
    "EM101",
    "D100",
    "D101",
    "D102",
    "D106",
    "D107",
    "D105",
    "D104",
    "D203",
    "D213",
    "TRY003",
    "S101",
    "ANN002",
    "ANN003",
    "RUF012",
    "FIX",
    "TD",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "ANN", "SLF"]
"**/migrations/*" = ["E", "RUF", "D"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "gamenight.settings"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["iommi.*", "qrcode.*", "networkx.*", "django_ratelimit.*"]
